--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "class-variance-authority": "^0.7.0",
+    "jodit-react": "^4.1.2",
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
     "react": "^18",
