--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-switch": "^1.1.0",
     "class-variance-authority": "^0.7.0",
+    "framer-motion": "^11.3.28",
     "jodit-react": "^4.1.2",
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
