--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@types/d3": "^7.4.3",
     "class-variance-authority": "^0.7.0",
+    "d3": "^7.9.0",
     "framer-motion": "^11.3.28",
     "jodit-react": "^4.1.2",
     "lucide-react": "^0.414.0",
