--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "recharts": "^2.12.7",
     "sharp": "^0.33.4"
   },
   "devDependencies": {
